JG-2007-07-31-0: Enhancem.: Use start_sge_bin where possible, cleanup.
                 Review:    RD

CR-2007-07-31-0: Enhancem.: Fixed some TODOs in hedeby checktree
                 Review:    TBD

JG-2007-07-30-0: Bugfix:    Fixed bugs/issuezilla/2304.
                 Review:    RD

JG-2007-07-27-1: Bugfix:    Tests calling qevent (throughput, various issue
                            tests) failed in CSP mode.
                            Cleanup.
                 Review:    RD

RD-2007-07-27-0: Bugfix:    - fixed dtrace test
                 Enhancem.: - added more complex range list for AR in
                              qmaster/spooling test
                 Review:    JG

JG-2007-07-27-0: Bugfix:    Fixed set_complex, cleanup.
                 Review:    MD

CR-2007-07-26-0: Enhancme.: o added hedeby installation support and a test
                              for issue 67
                 Review:    TBD

CR-2007-07-25-0: Enhancem.: o fixed some parsing errors
                            o added "*.sav.*" and "*.sav" to .cvsignore file
                            o removed setting of shared library path in 
                              enhanced_setup() procedure (global check.exp)
                            o fixed wrong file length in get_file_content()
                 Review:    RD

AP-2007-07-23-0: Bugfix:    testsuite configuration procedures should use 
                            config_generic
                 Issue:     133

RD-2007-07-23-0: Bugfix:    fixed wrong dynamic library path on darwin
                 Review:    JG

JO-2007-07-20-0: Bugfix:    Changed order in which views are dropped to reflect
                            new dependencies
                 Review:    JP

LP-2007-07-20-0: Enhancem:  Improved jgdi_shell tests
                 Review:    PJ

AP-2007-07-19-0: Bugfix:    Error when modifying additional checktree directory 
                            items.
                 Issue:     135
