@@ -1,3 +1,6 @@
+CR-2007-08-01-0: Enhancem.: Added new test for hedeby: show_status
+                 Review:    TBD
+
 JG-2007-07-31-0: Enhancem.: Use start_sge_bin where possible, cleanup.
                  Review:    RD
 
